@@ -1,3 +1,9 @@
+1999-06-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* archiver.m ([MyClass -setOffset:]): Change offset to unsigned.
+	([Key -setOffset:]): Likewise.
+	(Key): Likewise.
+
 1999-06-05  Alex Lancaster  <alex@santafe.edu>
 
 	* archiver.m ([MyClass -setUpdateFlag:]): New method and instance
